--- a/careportsapp/src/app/dev-all-item/dev-all-item.component.html
+++ b/careportsapp/src/app/dev-all-item/dev-all-item.component.html
@@ -19,6 +19,12 @@
                     <div class="input-group">
                       <input type="text" name="search_item_number" formControlName="search_item_number" class="input-sm form-control input-s-sm inline" placeholder="Item Number" placeholder="Item Number">
                       <span class="input-group-btn" style="padding-left: 2px;">
+                        <input type="checkbox" name="src_chk_item" value="Item" checked=""> Item
+                      </span>
+                      <span class="input-group-btn" style="padding-left: 2px;">
+                        <input type="checkbox" name="src_chk_sub_item" value="SubItem"> Sub Item
+                      </span>
+                      <span class="input-group-btn" style="padding-left: 2px;">
                         <button class="btn btn-sm btn-white" type="submit">Go!</button>
                       </span>
                       <span class="input-group-btn" style="padding-left: 2px;">
@@ -102,19 +108,18 @@
                     </select>                
                   </div>
                   <div class="col-sm-2 m-b-xs">
-                    <select class="input-sm form-control input-s-sm inline" formControlName="adv_search_sla">
-                      <option value="null"> --SLA-- </option>
-                      <option value="NonAged">Non Aged</option>
-                      <option value="Aged">Aged</option>
-                      <option value="Primary">Primary</option>
-                      <option value="Secondary">Secondary</option>
-                      <option value="Tertiary">Tertiary</option>
+                    <select class="input-sm form-control input-s-sm inline" formControlName="adv_search_sprint_name">
+                      <option value="null"> --Sprint-- </option>
+                      <option value="All">All</option>
+                      <option value="Sprint-9">Sprint-9</option>
+                      <option value="Sprint-8">Sprint-8</option>
+                      <option value="Sprint-7">Sprint-7</option>
                     </select>                
                   </div>
                   <div class="col-sm-2 m-b-xs">
-                    <select class="input-sm form-control input-s-sm inline" formControlName="adv_search_debt">
-                      <option value="null"> --Debt-- </option>
-                      <option value="Functional">Functional</option>
+                    <select class="input-sm form-control input-s-sm inline" formControlName="adv_search_project">
+                      <option value="null"> --Project-- </option>
+                      <option value="Functional">STS Singlapore</option>
                       <option value="Technical">Technical</option>
                       <option value="Knowledge">Knowledge</option>
                     </select>                
@@ -122,12 +127,10 @@
                   <div class="col-sm-2">
                     <div class="input-group">
                       <select class="input-sm form-control input-s-sm inline" formControlName="adv_search_priority">
-                      <option value=" "> --Sprint-- </option>  
-                      <option value="Sprint 10">Sprint 10</option>
-                      <option value="Sprint 9">Sprint 9</option>
-                      <option value="Sprint 8">Sprint 8</option>  
-                      <option value="print 7">Sprint 7</option>
-                      <option value="Sprint 6">Sprint 6</option>
+                      <option value=" "> --Priority-- </option>  
+                      <option value="High">High</option>
+                      <option value="Medium">Medium</option>
+                      <option value="Medium Low">Medium Low</option> 
                      
                     </select>
                       <span class="input-group-btn" style="padding-left: 2px;">
@@ -173,7 +176,7 @@
                         <td>{{ devitemOb.developerName }} - {{ devitemOb.testerName }}</td> 
                         <td>{{ devitemOb.applicationName }}</td> 
                         <td>{{ devitemOb.itemSprintName }}</td> 
-                        <td><a href="#devmodal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg devitem-edit-item-button" (click)="getUpdateItem(devitemOb.devItemId)"></i></a>&nbsp;<a href="javascript:void(0)" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg devitem-report-edit-item-button" (click)="getReportUpdateItem(devitemOb.devItemId)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(devitemOb.devItemId)"></i></a></td>
+                        <td><a href="#devmodal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg devitem-edit-item-button" (click)="getUpdateItem(devitemOb.devItemId)"></i></a>&nbsp;<a href="#devmodalview" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg devitem-report-edit-item-button" (click)="getReportUpdateItem(devitemOb.devItemId)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(devitemOb.devItemId)"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -207,7 +210,7 @@
                         </div>
                       	
                       </div>
-                      <div class="col-sm-3" style="padding-right: 0px">
+                      <div class="col-sm-3" >
                       	
                       	<div class="form-group">
                           <label for="exampleSelect1">Item Type</label>
@@ -234,7 +237,7 @@
                         </div>
                       </div>
                       
-                      <div class="col-sm-4" style="padding-left: 0px">
+                      <div class="col-sm-3" style="padding-left: 0px">
                         
                         <div class="form-group">
                           <label for="exampleSelect1">Item Status</label>
@@ -248,7 +251,7 @@
                         </div>
                         
                       </div>
-                      <div class="col-sm-4" >
+                      <div class="col-sm-3" >
                         
                         <div class="form-group">
                           <label for="exampleSelect1">Application Name</label> 
@@ -264,7 +267,23 @@
                         
                          
                       </div>
-                      <div class="col-sm-4" style="padding-right: 0px">
+                      <div class="col-sm-3" >
+                        
+                        <div class="form-group">
+                          <label for="exampleSelect1">Project Name</label> 
+                          <select name="project_name" formControlName="project_name" class="form-control" >
+                          <option value="">  -- Select -- </option>  
+                          <option value="STS">STS Singapore</option>
+                          <option value="BULATS">BULATS</option>
+                          <option value="RVS">RVS</option>
+                          <option value="CIE Direct">CIE Direct</option>
+                          <option value="Entries Externate">Entries Externate</option>
+                          </select>
+                        </div>
+                        
+                         
+                      </div>
+                      <div class="col-sm-3" style="padding-right: 0px">
                       	<div class="form-group" id="form_group_bounce_item">
                           <label for="exampleSelect1">Sprint</label> 
                           
@@ -338,7 +357,33 @@
               </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
           </div>
+
           </form>
+          <div class="modal fade" id="devmodalview">
+            <div class="dev-view-modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="addItemModalClose()">&times;</button>
+                  <h4 class="modal-title">Add Item</h4>
+                </div>
+
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      
+                    
+                                     
+                  </div>
+                </div>
+              </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-white" data-dismiss="modal" (click)="addItemModalClose()" >Close</button>
+                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button> -->
+                  <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div>
                 <footer class="panel-footer">
                   <div class="row">
                     <div class="col-sm-4 hidden-xs">
