--- a/careportsapp/src/app/support-all-item/support-all-item.component.html
+++ b/careportsapp/src/app/support-all-item/support-all-item.component.html
@@ -9,10 +9,9 @@
                 <div class="row text-sm wrapper">
                   <div class="col-sm-7 m-b-xs">
                     <select class="input-sm form-control input-s-sm inline">
-                      <option value="1">Delete selected</option>
-                      <option value="3">Export</option>
+                      <option value="1">Excel Export</option>
                     </select>
-                    <button class="btn btn-sm btn-white" style="margin-left: 2px;">Apply</button>                
+                    <button class="btn btn-sm btn-white" style="margin-left: 2px;" (click)="exportExcelOnClickBtn()" type="button">Apply</button>                
                   </div>
                   
                   <div class="col-sm-5">
@@ -156,7 +155,7 @@
                     </thead>
                     <tbody>
                       <tr *ngFor="let itemObj of items | paginate: config">
-                        <td>{{ itemObj.id }}</td>
+                        <td><a href="javascript:void(0)">{{ itemObj.id }}</a></td>
                         <td>{{ itemObj.itemNumber }}</td>
                         <td>{{ itemObj.itemType }}</td>
                         <td>{{ itemObj.itemStatus }}</td>
@@ -167,7 +166,7 @@
                         </td>                        
                         <td>{{ itemObj.itemAssigned }}</td> 
                         <td>{{ itemObj.itemCreatedDate | date:'yyyy-MM-dd HH:mm a'}}</td> 
-                        <td><a href="#modal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg supitem-edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a>&nbsp;<a href="javascript:void(0)" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg supitem-report-edit-item-button" (click)="getReportUpdateItem(itemObj.id)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(itemObj.id)"></i></a></td>
+                        <td><a href="#modal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg supitem-edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a>&nbsp;<a href="#operationmodal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg supitem-report-edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(itemObj.id)"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -178,13 +177,13 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="addItemModalClose()">&times;</button>
-                  <h4 class="modal-title">Add Item</h4>
+                  <h4 class="modal-title" id="add_edit_modal_title">Add Item</h4>
                 </div>
 
                 <div class="modal-body">
                   <div class="row">
                     <div class="col-sm-12">
-                      <input type="hidden" class="form-control"  formControlName="item_id">
+                      
                       <div class="col-sm-6" style="padding-left: 0px">
                         <div class="form-group">
                           <label for="exampleSelect1">Item Number</label>   
@@ -281,68 +280,16 @@
                           <!-- <input type="text" name="item_created_date" formControlName="item_created_date" class="form-control" placeholder="created On" > -->
                           <p-calendar placeholder="created On" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" formControlName="item_created_date" useUtc hourFormat="24"  [monthNavigator]="true" [yearNavigator]="true" yearRange="2019:2030"></p-calendar>
                         </div>
-                       <div class="form-group" id="form_group_item_close_date">
-                        <label for="exampleSelect1">Closed On</label>
-                          <!-- <input type="text" name="item_close_date" formControlName="item_close_date" class="form-control" placeholder="Close On" > -->
-                          <p-calendar placeholder="Close On" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" formControlName="item_close_date" useUtc hourFormat="24" [monthNavigator]="true" [yearNavigator]="true" yearRange="2019:2030"></p-calendar>
-                        </div>
-                        <div class="form-group" id="form_group_aged_item">
-                          <label for="exampleSelect1">Aged</label>
-                          <!-- <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" > -->
-                           <select name="aged_item" id="aged_item" formControlName="aged_item" class="form-control" >
-                          <option value="N">No</option>  
-                          <option value="Y">Yes</option>
-                          </select>
-                        </div>
-                        
+                       
                          
                       </div>
                       <div class="col-sm-6" style="padding-right: 0px;">
-                        <div class="form-group">
-                          <label for="exampleSelect1">Associated Item</label> 
-                          <input type="text" name="associated_item" formControlName="associated_item" class="form-control" placeholder="Associated" >
-                        </div>
-                        <div class="form-group" id="form-group_item_owner">
-                          <label for="exampleSelect1">Item Owner</label> 
-                          <input type="text" name="item_owner" formControlName="item_owner" class="form-control" placeholder="Item Owner" >
-                        </div>
-                        <div class="form-group" id="form-group_aged_justification">
-                          <label for="exampleSelect1">Aged Justification</label> 
-                          <textarea name="item_description"  class="form-control" placeholder="Justification" readonly="true"></textarea>
-                        </div>  
-                        
-                        
-                      </div>
-                      <div class="col-sm-4" style="padding-left: 0px;">
-                        <div class="form-group" id="form_group_primary_sla_breahed">
-                          <label for="exampleSelect1">Primary SLA Breach</label>
-                          <!-- <input type="text" name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control" placeholder="Primary SLA" > -->
-                          <select name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control"  >
-                          <option value="N">No</option>  
-                          <option value="Y">Yes</option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-sm-4" >
-                        <div class="form-group" id="form_group_secondary_sla_breahed">
-                          <label for="exampleSelect1">Secondary SLA Breach</label> 
-                          <!-- <input type="text" name="secondary_sla_breahed" formControlName="secondary_sla_breahed" class="form-control" placeholder="Secondary SLA" > -->
-                          <select name="secondary_sla_breahed" formControlName="secondary_sla_breahed" class="form-control"  >
-                          <option value="N">No</option>  
-                          <option value="Y">Yes</option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-sm-4" style="padding-right: 0px;">
-                        <div class="form-group" id="form_group_tertirary_sla_breahed">
-                          <label for="exampleSelect1">Tertiary SLA Breach</label>
-                          <!-- <input type="text" name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control" placeholder="Tertiry SLA" > -->
-                          <select name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control"  >
-                          <option value="N">No</option>  
-                          <option value="Y">Yes</option>
-                          </select>
-                        </div>
-                      </div> 
+                        <div class="form-group" id="form_group_item_close_date">
+                        <label for="exampleSelect1">Closed On</label>
+                          <!-- <input type="text" name="item_close_date" formControlName="item_close_date" class="form-control" placeholder="Close On" > -->
+                          <p-calendar placeholder="Close On" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" formControlName="item_close_date" useUtc hourFormat="24" [monthNavigator]="true" [yearNavigator]="true" yearRange="2019:2030"></p-calendar>
+                        </div>                      
+                      </div>                     
                       
                     
                     <div class="form-group" id="form_group_item_resolution">
@@ -353,8 +300,145 @@
               </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-white" data-dismiss="modal" (click)="addItemModalClose()" >Close</button>
-                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button> -->
-                  <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button>
+                  <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButtonAddEdit">Save changes</button>
+                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating...">Save changes</button> -->
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div>
+          <div class="modal fade" id="operationmodal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="addItemModalClose()">&times;</button>
+                  <h5 class="modal-title"><span style="font-weight: bold">{{itemsaveform.value.item_type}} ( {{itemsaveform.value.item_number}} )</span> - <span style="font-weight: bold">{{itemsaveform.value.application_name}} </span>({{itemsaveform.value.item_created_date | date}} - {{itemsaveform.value.item_close_date | date}}) - {{itemsaveform.value.item_assigned}}</h5> 
+                </div>
+
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <input type="text" class="form-control"  formControlName="item_id">
+                     
+                      <div class="form-group">
+                        <label for="exampleSelect1">Subject</label>
+                        <input type="text" name="item_subject" formControlName="item_subject" class="form-control" placeholder="Item Subject" >
+                      </div>                    
+                      <div class="form-group">
+                        <label for="exampleSelect1">Description</label>
+                        <textarea name="item_description" formControlName="item_description" class="form-control" placeholder="Item Description"></textarea>
+                      </div>
+                      <div class="form-group" id="form_group_item_resolution">
+                      <input type="text" name="item_resolution" formControlName="item_resolution" class="form-control" placeholder="Resoluation" >
+                    </div>
+                    <div class="col-sm-3" style="padding-left: 0px;">
+                      <div class="form-group" id="form_group_aged_item">
+                          <label for="exampleSelect1">Aged</label>
+                          <!-- <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" > -->
+                           <select name="aged_item" id="aged_item" formControlName="aged_item" class="form-control" >
+                          <option value="N">No</option>  
+                          <option value="Y">Yes</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-3" style="padding-left: 0px;">
+                        <div class="form-group" id="form_group_primary_sla_breahed">
+                          <label for="exampleSelect1">Primary SLA</label>
+                          <select name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control"  >
+                          <option value="N">No</option>  
+                          <option value="Y">Yes</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-3" >
+                        <div class="form-group" id="form_group_secondary_sla_breahed">
+                          <label for="exampleSelect1">Secondary SLA</label> 
+                          <select name="secondary_sla_breahed" formControlName="secondary_sla_breahed" class="form-control"  >
+                          <option value="N">No</option>  
+                          <option value="Y">Yes</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-3" style="padding-right: 0px;">
+                        <div class="form-group" id="form_group_tertirary_sla_breahed">
+                          <label for="exampleSelect1">Tertiary SLA</label>
+                          <select name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control"  >
+                          <option value="N">No</option>  
+                          <option value="Y">Yes</option>
+                          </select>
+                        </div>
+                      </div> 
+                      <div class="form-group" id="form-group_aged_justification">
+                          <label for="exampleSelect1">Aged Justification</label> 
+                          <textarea name="item_description" formControlName="aged_justification"  class="form-control" placeholder="Justification" ></textarea>
+                       </div>
+                       <div class="form-group" >
+                          <label for="exampleSelect1">Breach Justification</label> 
+                          <textarea name="item_description" formControlName="breach_justification"   class="form-control" placeholder="Justification" ></textarea>
+                       </div>  
+                       <div class="col-sm-4" style="padding-left: 0px;">
+                        <div class="form-group" >
+                          <label for="exampleSelect1">Debt Class</label>
+                          <select name="debt_class" formControlName="debt_class"  class="form-control"  >
+                          <option value=" "> - Select -</option>    
+                          <option value="Technical">Technical</option>  
+                          <option value="Functional">Functional</option>
+                          <option value="Operational">Operational</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-4" >
+                        <div class="form-group" >
+                          <label for="exampleSelect1">Debt Type</label>
+                          <select name="debt_type" formControlName="debt_type" class="form-control"  >
+                          <option value=" "> - Select -</option>    
+                          <option value="Avoidable">Avoidable</option>  
+                          <option value="Unavoidable">Unavoidable</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-4" style="padding-right: 0px;">
+                        <div class="form-group" >
+                          <label for="exampleSelect1">Remedial Mechanism</label>
+                          <select name="remedial_mechanism" class="form-control"  formControlName="remedial_mechanism">
+                          <option value=" "> - Select -</option>    
+                          <option value="Eleminate">Eleminate</option>  
+                          <option value="Indristrilise">Indristrilise</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-4" style="padding-left: 0px;">
+                        <div class="form-group">
+                          <label for="exampleSelect1">Associated Item</label> 
+                          <input type="text" name="associated_item" formControlName="associated_item" class="form-control" placeholder="Associated" >
+                        </div>
+                                                
+                      </div>
+                      <div class="col-sm-4" >
+                        <div class="form-group" id="form-group_item_owner">
+                          <label for="exampleSelect1">Item Owner</label> 
+                          <input type="text" name="item_owner" formControlName="item_owner" class="form-control" placeholder="Item Owner" >
+                        </div>
+                                                
+                      </div>
+                      <div class="col-sm-4" style="padding-right: 0px;">
+                        <div class="form-group" id="form-group_item_owner">
+                          <label for="exampleSelect1">Revised Tower</label> 
+                          <select name="revised_tower" class="form-control"  formControlName="revised_tower">
+                         <option value=" "> - Select -</option>    
+                          <option value="Oracle">Oracle</option>  
+                          <option value=".Net">.Net</option>
+                        </select>
+                        </div>                                                
+                      </div>                   
+                    
+                                     
+                  </div>
+                </div>
+              </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-white" data-dismiss="modal" (click)="addItemModalClose()" >Close</button>
+                  <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButtonReport">Save changes</button>
+                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating...">Save changes</button> -->
                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
